--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.facebook.fresco:fresco:0.9.0+'
     compile 'org.xutils:xutils:3.0'
     compile files('libs/zxing.jar')
+    compile files('libs/libammsdk.jar')
 }
