--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 23
         versionCode 2
-        versionName "2.0.1"
+        versionName "2.0.2"
     }
     buildTypes {
         release {
@@ -28,6 +28,7 @@ dependencies {
     compile files('libs/EventBus-2.4.0.jar')
     compile 'com.facebook.fresco:fresco:0.9.0+'
     compile 'org.xutils:xutils:3.0'
-    compile files('libs/zxing.jar')
     compile files('libs/libammsdk.jar')
+    compile 'net.fredericosilva:showTipsView:1.0.4'
+    compile files('libs/core-3.2.1.jar')
 }
